--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.0.1",
     "@tanstack/react-query-devtools": "^4.29.5",
     "axios": "^1.3.6",
     "dotenv": "^16.0.3",
